Fixed overflow for brand menu

--- a/app/assets/stylesheets/objectmenu.scss
+++ b/app/assets/stylesheets/objectmenu.scss
@@ -6,7 +6,6 @@
 .jumbotron#brand {
 	background-image: asset-url('/assets/background.gif');
 	background-size: cover;
-	height: 500px;
 	overflow: auto;
 }
 
